infra/kubernetes/base/webappq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webappq
  labels:
    app: webappq
    component: frontend
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app: webappq
